# aa274_autoware_ws

./: .gitignore  README.md  environment.sh  setup_environment.sh
config_ws/: environment.sh  extentions.sh
src/arg_localization/arg_data_croix_en_ternois/: CMakeLists.txt  package.xml
src/arg_localization/arg_data_croix_en_ternois/bagfile/: .gitattributes  devbot_lap0.tar.xz
src/arg_localization/arg_data_croix_en_ternois/pcd/: .gitattributes  pmap_tf.launch  race_track.pcd
src/arg_localization/arg_launch/: CMakeLists.txt  package.xml
src/arg_localization/arg_launch/launch/: Devbot_localization.launch  Play_rosbag.launch  ekf_localizer.launch  gps_to_localization_pose.launch
src/arg_localization/arg_launch/launch/localization/: init_position.launch  map_base_link_tf_broadcaster.launch  ndt_localization.launch
src/arg_localization/arg_launch/launch/rviz/: DevBot_localization.rviz  rviz_Devbot.launch
src/arg_localization/arg_launch/scripts/: gps_to_localization_pose.py  localization_evaluation.py  map_base_link_tf_broadcaster.py  odom_publisher.py  set_initial_pose.py
src/arg_localization/arg_localization/: CMakeLists.txt  package.xml
src/arg_localization/arg_localization/launch/: gps_pose_estimator.launch  init_position.launch  lidar_pose_estimator.launch  map_base_link_tf_broadcaster.launch
src/arg_localization/arg_localization/scripts/: gps_to_localization_pose.py  map_base_link_tf_broadcaster.py  odom_publisher.py  set_initial_pose.py
src/arg_localization/autoware_localitation/amathutils_lib/: CMakeLists.txt  package.xml
src/arg_localization/autoware_localitation/ekf_localizer/: CMakeLists.txt  package.xml
src/arg_localization/autoware_localitation/ekf_localizer/launch/: ekf_localizer.launch
src/arg_localization/autoware_localitation/ekf_localizer/src/: ekf_localizer.cpp
src/arg_localization/autoware_localitation/map_loader/: CMakeLists.txt  package.xml
src/arg_localization/autoware_localitation/map_loader/src/pointcloud_map_loader/: pointcloud_map_loader_node.cpp
src/arg_localization/autoware_localitation/pointcloud_preprocessor/: CMakeLists.txt
src/arg_localization/autoware_localitation/pose_estimator/lib/autoware_lidar_localizer/: CMakeLists.txt
src/arg_localization/autoware_localitation/pose_estimator/lib/autoware_lidar_localizer/include/autoware_lidar_localizer/pose_linear_interpolator/: pose_linear_interpolator.h
src/arg_localization/autoware_localitation/pose_estimator/lib/autoware_lidar_localizer/include/autoware_lidar_localizer/util/: convert_ros_msgs.h  data_structs.h
src/arg_localization/autoware_localitation/pose_estimator/lib/autoware_lidar_localizer/src/: lidar_localizer.cpp
src/arg_localization/autoware_localitation/pose_estimator/lib/autoware_lidar_localizer/src/pose_linear_interpolator/: pose_linear_interpolator.cpp
src/arg_localization/autoware_localitation/pose_estimator/lib/autoware_lidar_localizer/src/util/: convert_ros_msgs.cpp  util_functions.cpp
src/arg_localization/autoware_localitation/pose_estimator/lib/ndt_cpu/: CMakeLists.txt
src/arg_localization/autoware_localitation/pose_estimator/lidar_localizer/: CMakeLists.txt  package.xml
src/arg_localization/autoware_localitation/pose_estimator/lidar_localizer/launch/: ndt_matching.launch
src/arg_localization/autoware_localitation/pose_estimator/lidar_localizer/nodes/ndt_matching/: ndt_matching.cpp
src/arg_localization/autoware_localitation/pose_estimator/ndt_msgs/: CMakeLists.txt  package.xml
src/arg_localization/autoware_localitation/pose_estimator/ndt_msgs/msg/: ConfigNDTSlam.msg
src/arg_localization/autoware_localitation/pose_estimator/pcl_registration/: CMakeLists.txt
src/arg_localization/autoware_localitation/util/pose_initializer/include/pose_initializer/: pose_initializer_core.h
src/arg_localization/autoware_localitation/util/pose_initializer/src/: pose_initializer_core.cpp
src/arg_localization/devbot_description/: CMakeLists.txt  package.xml
src/arg_localization/devbot_description/launch/: DevBot2.launch
src/arg_localization/devbot_description/urdf/: roborace.urdf.xarco
src/arg_localization/map_file/launch/: map_loader.launch
src/arg_localization/map_file/nodes/points_map_loader/: points_map_loader.cpp
src/arg_localization/ouster-lidar/ouster_ros/: CMakeLists.txt  os1.launch  os1_local.launch  os1_raw.launch
src/arg_localization/ouster-lidar/ouster_ros/src/: os1_cloud_node.cpp
src/autoware_planning/vifware_data_tugraz/: CMakeLists.txt  package.xml
src/autoware_planning/vifware_data_tugraz/pcd/: .gitattributes  tugraz.pcd
src/autoware_planning/vifware_data_tugraz/vector_map/: curb.csv  dtlane.csv  idx.csv  lane.csv  line.csv  node.csv  point.csv
src/autoware_planning/vifware_launch/: CMakeLists.txt  package.xml
src/autoware_planning/vifware_launch/launch/: simulation.launch  vifware_autoware.launch
src/autoware_planning/vifware_launch/launch/autoware/: vifware_detection.launch  vifware_low_level_control.launch  vifware_map.launch  vifware_mission_planning.launch  vifware_motion_planning.launch  vifware_mpc_follower.launch  vifware_pure_pursuit.launch  vifware_sensing.launch  vifware_tf.launch
src/autoware_planning/vifware_launch/launch/rviz/: Open_Planner_config.rviz  rviz.launch
src/autoware_planning/vifware_launch/scripts/: goal_transform.py  vehicle_control_gui.py
