<?xml version="1.0"?>
<package format="2">
  <name>devbot_description</name>
  <version>0.0.0</version>
  <description>The roborace_description package</description>

  <maintainer email="roborace@roborace.com">roborace</maintainer>
  <license>Roborace</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

</package>
