<?xml version="1.0"?>
<package format="2">
  <name>vifware_data_tugraz</name>
  <version>0.0.0</version>
  <description>The vifware_data_tugraz package</description>

  <maintainer email="kl@v2c2.at">kl</maintainer>
  <license>V2C2</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
